<resources>
    <string name="app_name">Sleep Company Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sleep Company</string>
    <string name="nav_header_subtitle">Manufacturing Tracker</string>

    <string name="action_settings">Settings</string>
    <string name="hide">Hide</string>
    <string name="map_record" translatable="false">Map Tags</string>
    <string name="exit">Exit</string>
    <string name="config">Config</string>
    <string name="inventory">Inventory</string>
    <string name="once">Once</string>
    <string name="continues">Start Reading</string>
    <string name="stop">Stop</string>
    <string name="save_data" translatable="false">Save &amp; Export</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="clear">Clear</string>
    <string name="powertitle">Power</string>
    <string name="power_value">Power:</string>
    <string name="getpower">GetPower</string>
    <string name="setpower">SetPower</string>
    <string name="regiontitle">Region</string>
    <string name="region">Region:</string>
    <string name="getregion">GetRegion</string>
    <string name="temptitle">Temperature</string>
    <string name="tagtypetitle">Tag Type</string>
    <string name="settagtype">Set TagType</string>
    <string name="gettemp">GetTemp</string>
    <string name="temppro">TempPro</string>
    <string name="total">Total:</string>
    <string name="readTagData_faild">ReadTagData faild.</string>
    <string name="readTagData_sucess">ReadTagData sucess.</string>
    <string name="please_select_a_tag">plase select a tag.</string>
    <string name="the_parameter_cannot_be_empty">The parameter cannot be empty.</string>
    <string name="writeData_cannot_be_empty">WriteData cannot be empty.</string>
    <string name="writeTagData_faild">WriteTagData faild.</string>
    <string name="writeTagData_sucess">WriteTagData sucess.</string>
    <string name="open_failed">Open Filed.</string>
    <string name="RfidGetTemperature_faild">RfidGetTemperature faild.</string>
    <string name="temperature">temperature</string>
    <string name="RfidGetPower_faild">RfidGetPower faild.</string>
    <string name="power">power:</string>
    <string name="RfidSetPower">RfidSetPower:</string>
    <string name="please_input_power">please input power</string>
    <string name="RfidGetRegion_faild">RfidGetRegion faild.</string>
    <string name="fcc">FCC</string>
    <string name="id_pc_epc">ID(PC+EPC)</string>
    <string name="nums">Nums</string>
    <string name="rssi">RSSI</string>
    <string name="bank">Bank</string>
    <string name="address">Address</string>
    <string name="lenth">Lenth</string>
    <string name="password">Password</string>
    <string name="dbm">dBm</string>
    <string name="c">℃</string>
    <string name="_00000000">00000000</string>

    <string name="tagType" translatable="false">Tags Type</string>
    <string name="select_tagtype" translatable="false">Select Tag Type</string>
    <string name="temptag" translatable="false">TEMP TAG</string>
    <string name="ledtag" translatable="false">LED TAG</string>
    <string-array name="tagtypeoptions">
        <item>Select tag Type</item>
        <item>TEMP</item>
        <item>LED</item>
    </string-array>






    <string name="title_scanner">RFID Scanner</string>

    <string name="section_select">Select Section</string>

    <string name="map">Map</string>
    <string name="mapped">Mapped</string>
    <string-array name="current_stage_options">
        <item>Bonding</item>
        <item>Tapedge</item>
        <item>Zip Cover</item>
        <item>QC</item>
        <item>Packing</item>
        <item>Ready for Shipment</item>
        <item>Shipped</item>
        <item>Returned</item>
        <item>Cancelled</item>
    </string-array>

    <string-array name="qc_status_options">
        <item>PENDING</item>
        <item>PASS</item>
        <item>FAILED</item>
    </string-array>

</resources>
