<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.treewalker.rfidapp.SettingViewModel" />

        <variable
            name="listener"
            type="com.treewalker.rfidapp.SettingsFragment.HandlerClick" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#88000000"
            android:text="@string/powertitle"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/tv_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/power_value"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_power"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_power"
                android:background="@drawable/et"
                android:text="@={vm.power}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/et_power"
                android:text="@string/dbm"
                android:textColor="#66000000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bt_readpower"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:text="@string/getpower"
                android:textSize="15dp"
                android:onClick="@{()->listener.GetPower()}"/>

            <Button
                android:id="@+id/bt_writepower"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/bt_readpower"
                android:text="@string/setpower"
                android:textSize="15dp"
                android:onClick="@{()->listener.SetPower()}"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#66000000"
            android:text="@string/regiontitle"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/tv_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/region"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_region"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_region"
                android:background="@drawable/et"
                android:text="@={vm.region}"/>

            <Button
                android:id="@+id/bt_getregion"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/getregion"
                android:textSize="15dp"
                android:onClick="@{()->listener.GetRegion()}"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#66000000"
            android:text="@string/temptitle"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/temptitle"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_temperature"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_temperature"
                android:background="@drawable/et"
                android:text="@={vm.temp}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/et_temperature"
                android:text="@string/c"
                android:textColor="#66000000"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bt_gettemperature"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/gettemp"
                android:textSize="15dp"
                android:onClick="@{()->listener.GetTemperature()}"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#66000000"
            android:text="@string/tagtypetitle"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">



            <Spinner
                android:id="@+id/tagtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/edittext_border"
                android:focusable="true"
                android:entries="@array/tagtypeoptions"
                />



            <Button
                android:id="@+id/bt_settagetype"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/settagtype"
                android:textSize="15dp"
                android:onClick="@{()->listener.setTagType()}"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#66000000"
            android:gravity="center_vertical"
            android:text="@={vm.version}"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</layout>